<resources>
    <string name="app_name">Vendas</string>
    <string name="hint_senha">senha</string>
    <string name="hint_email">Email</string>
    <string name="contentDescription">Logo da empresa</string>
    <string name="bt_sigin">Sing In</string>
    <string name="bt_sigup">Sing Up</string>
    <string name="password_fail">Senha não cadastrada.</string>
    <string name="email_fail">Email não cadastrado.</string>
    <string name="email_already">Email já cadastrado.</string>
    <string name="signup_fail">Sign UP falhou. A internet está conectada?</string>
    <string name="hint_nome_searchview">hint_nm_sv</string>
    <string name="foto_do_produto">foto_do_produto</string>
    <string name="hint_quantos">hint_quantos</string>
    <string name="hint_descricao_produto">hint_descricao_produto</string>
    <string name="hint_vendedor">hint_vendedor</string>
    <string name="bt_vender">bt_vender</string>
    <string name="hint_estoque_produto">Estoque</string>
    <string name="hint_valor_produto">hint_valor_produto</string>
    <string name="hint_nome_produto">hint_nome_produto</string>
    <string name="title_menu_lercodigodebarras">title_menu_lercodigodebarras</string>
    <string name="menu_pesquisar">menu_pesquisar</string>
    <string name="label_estoque">estoque:</string>
    <string name="Vender">Vender</string>
    <string name="Quantidade">Quantidade</string>
    <string name="email_vendedor">email_vendedor</string>
    <string name="toast_cliente_selecionado">Cliente selecionado </string>
    <string name="alertdialog_sim">sim</string>
    <string name="message_nome_cliente">Deseja selecionar    </string>
    <string name="title_selecionar_cliente">Confirmar cliente</string>
    <string name="snack_operacao_cancelada">op_cancelada</string>
    <string name="alertdialog_nao">nao</string>
    <string name="message_cpf_cliente">cpf</string>
    <!-- Barcode -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="toast_adicionado_ao_carrinho">item_adicionado</string>
    <string name="menu_vender">menu_vender</string>
    <string name="cancelar">cancelar</string>
    <string name="nome_do_cliente_carrinho">nome_cliente</string>
    <string name="total_pedido_carrinho">total_carrinho</string>
    <string name="hint_total_item">total_item</string>
    <string name="hint_quantidade">quantidade</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_nav_carrinho">Carrinho</string>
    <string name="menu_nav_lista_de_clientes">Clientes</string>
    <string name="menu_nav_produto_admin">Produtos</string>
    <string name="menu_nav_cliente_admin">Clientes</string>
    <string name="menu_nav_sobre">Sobre</string>
    <string name="menu_nav_sair">Sair</string>
    <string name="title_confirma">Confirmação</string>
    <string name="mensagens_edita">Deseja editar o item pedido?</string>
    <string name="message_confirma_salvar">Deseja salvar o pedido?</string>
    <string name="carrinho_vazio" />
    <string name="confirma_excl">Deseja excluir o pedido?</string>
    <string name="cancel_pedido">Deseja cancelar o pedido?</string>
    <string name="titulo_janela_galeria_imagens">titulo_janela_galeria_imagens</string>
    <string name="snack_preencher_todos_campos">snack_preencher_todos_campos</string>
    <string name="toast_foto_produto_upload_fail">toast_foto_produto_upload_fail</string>
    <string name="toast_codigo_barras_ja_cadastrado">toast_codigo_barras_ja_cadastrado</string>
    <string name="toast_produto_salvo">toast_produto_salvo</string>
    <string name="snack_operacao_falhou">snack_operacao_falhou</string>
    <string name="toast_produto_nao_cadastrado">toast_produto_nao_cadastrado</string>
    <string name="message_processando">message_processando</string>
    <string name="toast_problemas_signin">toast_problemas_signin</string>
    <string name="label_codigo_de_barras">codigo de barra</string>
    <string name="hint_codigo_de_barras">hint cd barra</string>
    <string name="label_nome">label nome</string>
    <string name="label_descricao">label descricao</string>
    <string name="label_valor">label valr</string>
    <string name="hint_digite_valor">hint digite o valor</string>
    <string name="label_quantidade">label qnt</string>
    <string name="hint_quantidade_digite">hint quantidade digite</string>
    <string name="bt_salvar">bt_salvar</string>
    <string name="toast_foto_cliente_upload_fail">toast_foto_cliente_upload_fail</string>
    <string name="toast_cliente_salvo" />
    <string name="toast_cliente_nao_cadastrado" />
    <string name="foto_do_cliente">foto cliente</string>
    <string name="hint_codigo_cliente">cd cliente</string>
    <string name="hint_cpf_cliente">cpf cliente</string>
    <string name="input_error_invalido" />
    <string name="snack_insira_email" />
    <string name="label_cpf_cliente">Digite seu CPF</string>
    <string name="label_nome_cliente">Digite seu nome</string>
    <string name="hint_nome_cliente">nome do cliente</string>
    <string name="label_sobrenome_cliente">Digite seu Sobrenome</string>
    <string name="hint_sobrenome_cliente">sobrenome do cliente</string>
    <string name="label_cd_cliente">Codigo do cliente</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_sobrenome">sobrenome</string>
    <string name="hint_cpf">cpf</string>
    <string name="bt_ver_pedidos">bt_pedidos</string>
    <string name="tvSobre">Aplicativo desenvolvido no 5 semestre do CSTSI,na disciplina de PDM</string>
    <string name="menu_user_adm">Cadastro de usuário</string>
    <string name="tv_funcao">funcao</string>
    <string name="etFuncao">EtFuncao</string>
    <string name="btCadastrarUser">Cadastra usuário</string>
    <string name="hint_funcao">funcao</string>

</resources>
