<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/nav_usuario_adm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.UserAdminActivity"
        tools:layout_editor_absoluteY="81dp">

        <ImageView
            android:id="@+id/imvFotoCliente"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/foto_do_cliente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_cliente_icon_524x524" />

    <EditText
        android:id="@+id/etNomeUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint_nome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvSobrenomeUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeUser"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/etSobrenomeUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/hint_sobrenome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSobrenomeUser" />

    <EditText
        android:id="@+id/etEmailUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:digits="0123456789.-"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="407dp" />

    <Button
        android:id="@+id/btCadastrarUser"
        android:layout_width="142dp"
        android:layout_height="57dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorAccent"
        android:text="@string/bt_salvar"
        android:textColor="@color/font_white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNomeUser"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="Nome"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvFotoCliente" />

    <TextView
        android:id="@+id/tvSobrenomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sobrenome"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="281dp" />

    <TextView
        android:id="@+id/tvFuncaoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Função"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/etEmailUser"
        tools:layout_editor_absoluteX="16dp" />


    <TextView
        android:id="@+id/tvEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Email"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmailUser"
        app:layout_constraintTop_toBottomOf="@+id/etSobrenomeUser"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tvSenhaUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Senha"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordUser"
        app:layout_constraintTop_toBottomOf="@+id/etFuncao"
        tools:layout_editor_absoluteX="16dp" />


    <EditText
        android:id="@+id/etFuncao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint_funcao"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFuncaoUser" />


    <EditText
        android:id="@+id/etPasswordUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btCadastrarUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imb_pesquisar"
            android:layout_width="51dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/etCodigoCliente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etCodigoCliente"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_search_white_24dp" />

    <ProgressBar
        android:id="@+id/pb_foto_cliente_admin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imvFotoCliente"
        app:layout_constraintEnd_toEndOf="@+id/imvFotoCliente"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imvFotoCliente"
        app:layout_constraintTop_toTopOf="@+id/imvFotoCliente"
        app:layout_constraintVertical_bias="0.549" />


    </android.support.constraint.ConstraintLayout>